welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i <- 0 to 4){
  ^Array1:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  T(5)=getCouleurSol()
  ^Array1:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i <- 0 to 5){
  ^Array1:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return T
  ^Array1:24: error: ':' expected but ')' found.
def peindre(T){
             ^Array1:39: error: identifier expected but '}' found.
}
^